--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,8 +26,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Droid Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: Sarasa Term SC;
   background: transparent;
   overflow: hidden;
   height: 100%;
