--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,8 +36,7 @@ body {
   line-height: 1.5;
 }
 body .chinese {
-  font-family: 'SarasaGothic', 'Droid Sans', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif !important;
+  font-family: Sarasa Term SC;
 }
 .resizable {
   background-image: url(../images/handle.png);
