--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Droid+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap');
 @font-face {
   font-family: 'Sarasa Gothic SC';
   font-style: normal;
@@ -26,7 +26,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Sarasa Term SC;
+  font-family: 'Noto Sans SC', sans-serif;
   background: transparent;
   overflow: hidden;
   height: 100%;
@@ -36,7 +36,7 @@ body {
   line-height: 1.5;
 }
 body .chinese {
-  font-family: Sarasa Term SC;
+  font-family: 'Noto Sans SC', sans-serif;
 }
 .resizable {
   background-image: url(../images/handle.png);
